<?xml version="1.0"?>
<package>
  <name>pein_srvs</name>
  <version>0.0.0</version>
  <description>The pein_srvs package</description>

  <maintainer email="elfring@todo.todo">Jos Elfring</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>pein_msgs</build_depend>
  <build_depend>std_msgs</build_depend>

  <run_depend>pein_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>message_runtime</run_depend>

</package>
